First version with correct images.   Still not aligned.

--- a/style.css
+++ b/style.css
@@ -2,32 +2,18 @@
 
 body {
   font-family: helvetica, arial, sans-serif;
-  margin: 0;  
-  width: 414px;
-  height: 628px;
+  margin-top: 20px;  
+  width: 100%;
+  height: 100%;
   background: #FFFFFF;
-  border: 1px solid #ccc;
-  
 }
 
 * {
   box-sizing: border-box;
 }
-gli.column {
-  float: left;
-  width: 50%;
-  padding: 5px 20px;
-}
 
-.row {
-  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-}
-
-/* Clearfix (clear floats) */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
+img {
+  height: 50px;
 }
 
 h1{
@@ -61,16 +47,21 @@ h2 {
 
 .fruitbox {
   position: relative;  
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.27) 100%);
   
-  margin: 30px 15px 1px 30px;
+  margin: 15px 15px 1px 30px;
   height: 100px;
+}
+
+.fruitbox img {
   border-radius: 15px;
+  height: 100px;
+  width: 100%;
 }
 
 .fruittext h2{
   position: absolute;
-  top: 40%;
+  bottom: 10px;
+  left: 20px;
   
   font-family: 'Roboto', sans-serif;
   font-style: normal;
@@ -83,15 +74,21 @@ h2 {
 
 .fruitpage {
   position: relative;  
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.27) 100%);
   
-  margin: 70px 15px 1px 30px;
-  height: 300px;  
+  margin: 40px 15px 1px 30px;
+  height: 250px;  
 }
+
+.fruitpage img {
+  border-radius: 15px;
+  height: 250px;
+  width: 100%;
+}
+
 
 .fruitpage h2{
   position: absolute;
-  top: 50%;
+  bottom: 60px;
   margin-left: 30px;
   
   font-family: 'Roboto', sans-serif;
@@ -106,14 +103,14 @@ h2 {
 
 .fruitpage h3{
   position: absolute;
-  top: 70%;
   margin-left: 30px;
+  bottom: 40px;
   
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 15px;
-  line-height: 26px;
+  line-height: 20px;
   
   color: #FFFFFF;
 }
